Bring Aura Window To Front When Sharing

When we capture an aura window, namely the chrome window itself, we did
not bring it to the front as we did for other windows.

This CL fixes this issue.

BUG=678436

Review-Url: https://codereview.chromium.org/2617613002
Cr-Commit-Position: refs/heads/master@{#442026}

Former-commit-id: 233457d015c31a412c1eb01d0bd941601a010861